# shrimp

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/shrimp-cli/: Cargo.toml
crates/shrimp-cli/src/: main.rs
crates/shrimp-context/: Cargo.toml
crates/shrimp-context/src/: lib.rs
crates/shrimp-core/: Cargo.toml
crates/shrimp-core/src/: agent.rs  config.rs  events.rs  lib.rs  parser.rs  session.rs
crates/shrimp-index/: Cargo.toml
crates/shrimp-index/src/: build.rs  lib.rs  parser.rs  store.rs
crates/shrimp-provider/: Cargo.toml
crates/shrimp-provider/src/: lib.rs  lmstudio.rs  ollama.rs
crates/shrimp-retrieval/: Cargo.toml
crates/shrimp-retrieval/src/: lib.rs
crates/shrimp-tools/: Cargo.toml
crates/shrimp-tools/src/: lib.rs
crates/shrimp-tui/: Cargo.toml
crates/shrimp-tui/src/: highlight.rs  lib.rs  markdown.rs
