[workspace]
members = [
    "crates/shrimp-index",
    "crates/shrimp-retrieval",
    "crates/shrimp-provider",
    "crates/shrimp-context",
    "crates/shrimp-tools",
    "crates/shrimp-core",
    "crates/shrimp-tui",
    "crates/shrimp-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossbeam-channel = "0.5"
crossterm = "0.29"
futures-util = "0.3"
ignore = "0.4"
once_cell = "1"
ratatui = "0.30"
rayon = "1"
redb = "4.1"
regex = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time", "fs", "io-util"] }
toml = "1.1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-highlight = "0.26"

shrimp-index = { path = "crates/shrimp-index" }
shrimp-retrieval = { path = "crates/shrimp-retrieval" }
shrimp-provider = { path = "crates/shrimp-provider" }
shrimp-context = { path = "crates/shrimp-context" }
shrimp-tools = { path = "crates/shrimp-tools" }
shrimp-core = { path = "crates/shrimp-core" }
shrimp-tui = { path = "crates/shrimp-tui" }
